17.mar (ws)
      - fix: Bar lines through multiple staves causes crash when creating parts
      - fix: Voltas on multiple staves causes crash when creating parts
      - fix navigator action check state
      - Update of text undo functionality. Instrument names can be edited again.
16.mar (ws)
      - update core & network part of qtscript bindings
      - big overhaul of the undo/redo code
15.mar (lv)
      - MusicXML import of credits
12.mar (ws)
      - removed "cursorBlink" preference
      (lv)
      - fixed most MusicXML regression testfiles
      (db)
      - update Dutch translation by Jaap Plaisier
      - update Finnish translation by Heino
      - update French translation by JLWaltener
      - update handbooks
11.mar (ws)
      - note input with mouse: do not allow a note input position between existing
        segments if start segment is part or a tuplet. Inserting between segments is
        not implemented and caused mscore to enter an endless loop.
      - added "layout stretch" and "measure number offset" to measure property
        dialog
      - implement preferences.importStyleFile: choose optional style file for
        all imports
10.mar (ws)
      - removed source copy of qscript debugger; the debugger is now part of
        qt4.5
      (lv)
      - updated some MusicXML regression testfiles
8.mar (ws)
      - added style options to specify anchor for articulation symbols
      (db)
      - change gateTimes in most demo files to match new defaults
      - update Italian translation by Antonio Marchionne
      - update Dutch translation by Jaap Plaisier
      - update handbooks
7.mar (ws)
      - fixes for small staves: keysig and dynamics are now also small
      - retain pitch class (pitch spelling) when changing pitch octave up/down
6.mar (ws)
      - note entry with mouse: trying to enter a note at a pitch position which is
        already occupied by a note removes this note.
      - add slur to line palette