@@ -213,6 +213,15 @@ void Score::changeTimeSig(int tick, int timeSigSubtype)
       {
       undoFixTicks();
 
+      // record old tickLens, since they will be modified when time is added/removed
+      QVector<int> tickLens;
+      for (MeasureBase* mb = _measures.first(); mb; mb = mb->next()) {
+            if (mb->type() != MEASURE)
+                  continue;
+            Measure* m = static_cast<Measure*>(mb);
+            tickLens.append(m->tickLen());
+            }
+
       int oz, on;
       sigmap->timesig(tick, oz, on);
 
@@ -302,25 +311,18 @@ void Score::changeTimeSig(int tick, int timeSigSubtype)
             segment = nseg;
             }
 
-      // record old tickLens, since they will be modified when time is added/removed
-      QVector<int> tickLens;
-      for (MeasureBase* mb = _measures.first(); mb; mb = mb->next()) {
-            if (mb->type() != MEASURE)
-                  continue;
-            Measure* m = (Measure*)mb;
-            tickLens.append(m->tickLen());
-            }
-
       //---------------------------------------------
       // modify measures
       //---------------------------------------------
 
       int j = 0;
+      int ctick = 0;
       for (MeasureBase* mb = _measures.first(); mb; mb = mb->next()) {
             if (mb->type() != MEASURE)
                   continue;
-            Measure* m = (Measure*)mb;
-            int newLen = sigmap->ticksMeasure(m->tick());
+            Measure* m = static_cast<Measure*>(mb);
+            int newLen = sigmap->ticksMeasure(ctick);
+            ctick += newLen;
             int oldLen = tickLens[j];
             ++j;
             if (newLen == oldLen)
