@@ -43,6 +43,7 @@
 
 //---------------------------------------------------------
 //   ARec
+//    articulation record
 //---------------------------------------------------------
 
 struct ARec {
